--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,11 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
-    "uuid": "^11.1.0"
-  },
-  "devDependencies": {
+    "uuid": "^11.1.0",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    
   }
 }
